AF|AN: Fixing modal to window height on mobile when it is open

--- a/src/components/Modal/_ModalStyles.sass
+++ b/src/components/Modal/_ModalStyles.sass
@@ -3,7 +3,8 @@
 body.modal-open
   @media screen and (max-width: 767px)
     position: fixed
-    overflow: hidden
+    overflow-y: auto
+    height: 100vh
 
 .now-modal
   display: none
